--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "framework7": "^4.0.0",
-    "framework7-react": "^4.0.0",
     "framework7-icons": "^2.2.0",
+    "framework7-react": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-responsive-carousel": "^3.1.50",
     "react-scripts": "2.1.3"
   },
   "scripts": {
