--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "4.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "firebase": "^6.6.2",
     "framework7": "^4.0.0",
-    "framework7-react": "^4.0.0",
     "framework7-icons": "^2.2.0",
+    "framework7-react": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-native-firebase": "^5.5.6",
+    "react-redux": "^7.1.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.4",
+    "redux-axios-middleware": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
