--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-design-icons": "^3.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-facebook-login": "^4.1.1",
     "react-native-firebase": "^5.5.6",
     "react-redux": "^7.1.1",
     "react-scripts": "2.1.3",
@@ -19,7 +20,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
