--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-design-icons": "^3.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-dotdotdot": "^1.3.1",
     "react-facebook-login": "^4.1.1",
     "react-native-firebase": "^5.5.6",
     "react-redux": "^7.1.1",
