--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-facebook-login": "^4.1.1",
     "react-native-firebase": "^5.5.6",
     "react-redux": "^7.1.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
     "redux-axios-middleware": "^4.0.1",
     "redux-thunk": "^2.3.0"
