--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
     "react-dotdotdot": "^1.3.1",
     "react-facebook-login": "^4.1.1",
     "react-native-firebase": "^5.5.6",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
-    "redux-axios-middleware": "^4.0.1",
-    "redux-thunk": "^2.3.0",
+    "react-redux": "5.1.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^0.16.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
