--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 .env.test.local
 .env.production.local
 
+bliimo-msap.keystore
+/platforms/android/app/release
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
