--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-ios": "^5.0.1",
+    "cordova-plugin-dialogs": "^2.0.2",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
@@ -158,7 +159,8 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
       "android",
